fix(css): bad spacing in the header regarding personal info

--- a/src/components/layout/Header/Dropdown.scss
+++ b/src/components/layout/Header/Dropdown.scss
@@ -1,45 +1,53 @@
 .dropbtn {
-    border: none;
-    z-index: 3;
-    filter: invert(1);
-    transform: scale(1.2);
-    background: none;
-    padding: 2em 1em 2em 1em;
+  border: none;
+  z-index: 3;
+  filter: invert(1);
+  transform: scale(1.2);
+  background: none;
+  position: absolute;
+  padding: 2em 0 2em 1em;
 }
-  
+
 /* The container <div> - needed to position the dropdown content */
 #header-dropdown {
-    @extend %flex-prop;
-    justify-content: flex-end;
-    padding: 10px;
+  @extend %flex-prop;
+  justify-content: flex-end;
+  padding: 10px;
 }
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-    position: absolute;
-    background-color: #292929;
-    width: -moz-max-content;
-    width: -webkit-fill-available;
-    width: max-content;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    margin-top: 7em;
-    border-radius: 10px;
-    opacity: 0;
-    transition: opacity 0.5s;
-    visibility: hidden;
+  position: absolute;
+  background-color: #292929;
+  width: -moz-max-content;
+  width: -webkit-fill-available;
+  width: max-content;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  margin-top: 7em;
+  border-radius: 10px;
+  opacity: 0;
+  transition: opacity 0.5s;
+  visibility: hidden;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    border-radius: 10px;
-    color: whitesmoke;
-    padding: 10px 10px;
-    text-decoration: none;
-    display: block;
-    z-index: 3;
+  border-radius: 10px;
+  color: whitesmoke;
+  padding: 10px 10px;
+  text-decoration: none;
+  display: block;
+  z-index: 3;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: $pink; color: black;}
+.dropdown-content a:hover {
+  background-color: $pink;
+  color: black;
+}
 
 /* Show the dropdown menu on hover */
-#header-dropdown:hover .dropdown-content {opacity: 1; transition: opacity 0.5s; visibility: visible;}
+#header-dropdown:hover .dropdown-content {
+  opacity: 1;
+  transition: opacity 0.5s;
+  visibility: visible;
+}
